# python-project-template

./: .copier-answers.yml  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile
src/my_package/: __init__.py
tests/: test_hello.py
